@@ -6,6 +6,7 @@ Changes in Release 2.5.4
 [JOST-190] - Backport some bugfixes from OpenSAML3
 [JOST-191] - Further Bugfixes to XACML\policy
 [JOST-193] - Make the implementation of custom bootstrap code easier, without relying on private data from DefaultBootstrap
+[JOST-194] - org.opensaml.ESAPISecurityConfig should use singleton pattern like the default ESAPI reference class
 
 Changes in Release 2.5.3
 =============================================
